--- a/src/app/components/gestion/gestion.component.html
+++ b/src/app/components/gestion/gestion.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar class="nav-bar">
     <span class="title">Menú</span>
     <button mat-button [routerLink]="['/Dashboard']" routerLinkActive="active">Dashboard</button>
-    <button mat-button [routerLink]="['/Dashboard']" routerLinkActive="active">Ventas</button>
-    <button mat-button [routerLink]="['/Dashboard']" routerLinkActive="active">Inventario</button>
+    <button mat-button [routerLink]="['/Ventas']" routerLinkActive="active">Ventas</button>
+    <button mat-button [routerLink]="['/Inventario']" routerLinkActive="active">Inventario</button>
 </mat-toolbar>
 <main>
   <router-outlet></router-outlet>
