--- a/src/app/components/gestion/gestion.component.html
+++ b/src/app/components/gestion/gestion.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="nav-bar">
     <span class="title">Menú</span>
-    <button mat-button [routerLink]="['/Dashboard']" routerLinkActive="active">Dashboard</button>
-    <button mat-button [routerLink]="['/Ventas']" routerLinkActive="active">Ventas</button>
+    <button mat-button [routerLink]="['/dashboard']" routerLinkActive="active">Dashboard</button>
+    <button mat-button [routerLink]="['/sales']" routerLinkActive="active">Ventas</button>
     <button mat-button [routerLink]="['/Inventario']" routerLinkActive="active">Inventario</button>
 </mat-toolbar>
 <main>
