Se cambian los raficos del dashboard por los de la libreria amchart 4 y se elimina la libreria de ngx-charts

--- a/src/app/components/dashboard/dashboard-num-card-chart/dashboard-num-card-chart.component.html
+++ b/src/app/components/dashboard/dashboard-num-card-chart/dashboard-num-card-chart.component.html
@@ -1,7 +1,1 @@
-<ngx-charts-number-card
-  [view]="view"
-  scheme="cool"
-  [results]="sales"
-  cardColor="#17113f"
-  (select)="onSelect($event)">
-</ngx-charts-number-card>
+<div id="chartdivProduct" style="width: 700px; height: 100%;"></div>
