--- a/src/app/components/dashboard/pie-chart/pie-chart.component.html
+++ b/src/app/components/dashboard/pie-chart/pie-chart.component.html
@@ -1,7 +1,1 @@
-<ngx-charts-advanced-pie-chart
-class="chart"
-[view]="[500, 200]"
-[scheme]="colorScheme"
-[results]="months"
-[gradient]="true"
-></ngx-charts-advanced-pie-chart>
+<div id="chartdiv" style="width: 600px; height: 100%;"></div>
