--- a/src/app/components/gestion/gestion.component.html
+++ b/src/app/components/gestion/gestion.component.html
@@ -2,7 +2,7 @@
     <span class="title">Menú</span>
     <button mat-button [routerLink]="['/dashboard']" routerLinkActive="active">Dashboard</button>
     <button mat-button [routerLink]="['/sales']" routerLinkActive="active">Ventas</button>
-    <button mat-button [routerLink]="['/Inventario']" routerLinkActive="active">Inventario</button>
+    <button mat-button [routerLink]="['/inventario']" routerLinkActive="active">Inventario</button>
 </mat-toolbar>
 <main>
   <router-outlet></router-outlet>
